--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,68 +10,80 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<header>
-    <nav class="container">
-        <h1>🏃️‍♂️ Fitness Tracker</h1>
-        <ul>
-            <li><a href="#workout">💪 Workouts</a></li>
-            <li><a href="#meals">🍽 Meals</a></li>
-            <li><a href="#calendar">📅 Schedule</a></li>
-            <li><a href="#weather">☁️ Weather</a></li>
-        </ul>
-    </nav>
-</header>
-<div class="container">
-    <p>Welcome to the Fitness Tracker Dashboard! Track your workouts, meals, and more.</p>
-</div>
+    <header>
+        <nav class="container">
+            <h1>JUSWORKITOUT</h1>
+            <ul class="nav-links">
+                <li><a href="#workout" class="nav-link">💪 Workouts</a></li>
+                <li><a href="#meals" class="nav-link">🍽 Meals</a></li>
+                <li><a href="#calendar" class="nav-link">📅 Schedule</a></li>
+                <li><a href="#weather" class="nav-link">☁️ Weather</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<main class="dashboard">
-    <div class="left-section">
-        <section id="workout" class="card">
-            <h2>💪 Workout Log</h2>
-            <form id="workout-form">
-                <input type="text" id="workout-type" placeholder="Workout Type" required>
-                <input type="number" id="workout-duration" placeholder="Duration (mins)" required>
-                <button type="submit">➕ Log Workout</button>
-            </form>
-            <canvas id="workoutChart"></canvas>
-        </section>
-
-        <section id="meals" class="card">
-            <h2>🍽 Meal Planner</h2>
-            <form id="meal-form">
-                <input type="text" id="meal-query" placeholder="Search Meals" required>
-                <button type="submit">🔍 Search</button>
-            </form>
-            <div id="meal-results"></div>
-            <canvas id="mealChart"></canvas>
-        </section>
-    </div>
-    
-    <div class="right-section">
-        <section id="calendar" class="card">
-            <h2>📅 Workout Schedule</h2>
-            <div id="calendar-container"></div>
-        </section>
-
-        <section id="weather" class="card">
-            <h2>☁️ Weather & Workout Suggestion</h2>
-            <p id="weather-info">Fetching weather...</p>
-        </section>
-    </div>
-</main>
-
-<footer>
     <div class="container">
-        <p>&copy; 2025 Fitness Tracker. All rights reserved.</p>
-        <p>Follow us on social media for updates!</p>
-    </div>
-</footer>
+        <p class="welcome-message">Welcome to the Fitness Tracker Dashboard! Track your workouts, meals, and more.</p>
 
-<!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="script.js"></script>
+
+
+    </div>
+
+    <main class="dashboard">
+        <div class="left-section">
+            <section id="workout" class="card">
+                <h2>💪 Workout Log</h2>
+                <form id="workout-form">
+                    <input type="text" id="workout-type" placeholder="Workout Type" required>
+                    <input type="number" id="workout-duration" placeholder="Duration (mins)" required>
+                    <button type="submit">➕ Log Workout</button>
+                </form>
+                <canvas id="workoutChart"></canvas>
+            </section>
+
+            <section id="meals" class="card">
+                <h2>🍽 Meal Planner</h2>
+                <form id="meal-form">
+                    <select id="diet-type" class="diet-select" required>
+                        <option value="">Select Diet Type</option>
+                        <option value="protein">High Protein</option>
+                        <option value="carbs">High Carbs</option>
+                        <option value="balanced">Balanced Diet</option>
+                        <option value="junk">Junk Food</option>
+                    </select>
+                    <button type="submit">🔍 Get Meal Plan</button>
+                </form>
+                <div id="meal-results" class="meal-results"></div>
+                <canvas id="mealChart"></canvas>
+            </section>
+        </div>
+
+        <div class="right-section">
+            <section id="calendar" class="card">
+                <h2>📅 Workout Schedule</h2>
+                <div id="calendar-container"></div>
+            </section>
+
+            <section id="weather" class="card">
+                <h2>☁️ Weather & Workout Suggestions</h2>
+                <p id="weather-info">Fetching weather...</p>
+                <div id="workout-suggestions" class="workout-suggestions"></div>
+            </section>
+        </div>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Fitness Tracker. All rights reserved.</p>
+            <p>Follow us on social media for updates!</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
