--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Fitness Tracker. All rights reserved.</p>
-            <p>Follow us on social media for updates!</p>
+            <p>&copy; 2025 JUSWORKITOUT. Get Fit Fast Bro</p>
+            <p>Founder: Asmit Banik, 24BCS10043</p>
         </div>
     </footer>
 
